# Discord-Bot

./: .gitignore  .replit  README.md  keep_alive.py  log.txt  lyrics.py  main.py  music_player.py  nohup.out  package-lock.json  pyproject.toml  ytcookies.txt  ytsearch.py
cogs/: lyrics_search.py  music_player.py  ytsearch.py
