[tool.poetry]
name = "Cerby Bot"
version = "0.5.0"
description = "Cerby Discord Bot"
authors = ["kennethfaurillo <kenneth.edison.faurillo@eee.upd.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube_dl = "^2021.12.17"
discord = "^2.1.0"
google-api-python-client = "^2.70.0"
python-dotenv = "^0.21.0"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
