[tool.poetry]
name = "Cerby Bot"
version = "0.8.1"
description = "Cerby Discord Bot"
authors = ["kennethfaurillo <kenneth.edison.faurillo@eee.upd.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.1.0"
google-api-python-client = "^2.70.0"
python-dotenv = "^0.21.0"
PyNaCl = "^1.5.0"
table2ascii = "^1.1.0"
azlyrics = "^1.3.2"
youtube-title-parse = "^1.0.0"
ytmusicapi = "^0.24.1"
isodate = "^0.6.1"
yt-dlp = "^2023.2.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
